--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Cocktails</h1>
 
+<%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-primary" %>
+
 <table class="table">
   <thead>
     <tr>
@@ -14,9 +16,9 @@
     <% @cocktails.each do |cocktail| %>
       <tr>
         <td><%= cocktail.name %></td>
-        <td><%= link_to 'Show', cocktail %></td>
-        <td><%= link_to 'Edit', edit_cocktail_path(cocktail) %></td>
-        <td><%= link_to 'Destroy', cocktail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', cocktail, class: "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_cocktail_path(cocktail), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', cocktail, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +26,3 @@
 
 <br>
 
-<%= link_to 'New Cocktail', new_cocktail_path %>
