--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,31 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Cocktails</h1>
-
-<br>
-<%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-primary" %>
-<br>
-<br>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'cocktails.jpg' %>');">
+  <div class="banner-content">
+    <h1>Cocktails</h1>
+    <p>Create your craziest drinks</p>
+    <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+  <div class="container">
     <% @cocktails.each do |cocktail| %>
-      <tr>
-        <td><%= cocktail.name %></td>
-        <td><%= link_to 'Show', cocktail, class: "btn btn-primary" %></td>
-        <td><%= link_to 'Edit', edit_cocktail_path(cocktail), class: "btn btn-success" %></td>
-        <td><%= link_to 'Destroy', cocktail, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
+          <div class="card-description">
+            <h2><%= cocktail.name %></h2>
+          </div>
+          <%= link_to "", cocktail_path(cocktail), class: 'card-link' %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
+  </div>
+  </div>
+</div>
