--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New Cocktail</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h1>Create a new cocktail</h1>
 
-<%= render 'form', cocktail: @cocktail %>
-
-<br>
-
-<%= link_to 'Back', cocktails_path %>
-
+      <%= simple_form_for @cocktail do |f| %>
+        <%= f.input :name %>
+        <%= f.button :submit, class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
